--- a/templates/index.html
+++ b/templates/index.html
@@ -4,10 +4,53 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" />
-    <title>Flask Template Test</title>
+    <title>Login</title>
+
 </head>
-<body>
-    <h1>Welcome to your Flask app!</h1>
-    <p>If you see this, your template is working perfectly.</p>
+<body>  
+    <style>
+        .login_text{
+            font-size: 50px;
+        }
+
+        .log-in_gaps{
+            height: 10px;
+            width: 1px;
+        }
+        
+        .header_to_login_gap{
+            height: 10px;
+            width: 1px;
+        }
+
+        .login_text{
+            margin-top: 200px;
+        }
+    </style>
+
+    <div class="darker_background">
+        <div class="center_div d-flex justify-content-center">
+            <h1 class="login_text">Login</1h>
+        </div>
+        <div class="header_to_login_gap"></div>
+        <form method="POST">
+            <div class="center_div d-flex justify-content-center fs-4">
+                <input type="text" name="username" placeholder="username"><br>  
+            </div>
+            <div class="log-in_gaps bg-dark"></div>
+            <div class="center_div d-flex justify-content-center fs-4">
+                <input type="text" name="password" placeholder="password"><br>  
+            </div>
+            <div class="log-in_gaps bg-dark"></div>
+
+            <div class="center_div d-flex justify-content-center">
+                <button class="btn btn-light">
+                    <label class="text text-dark fs-4">Submit</label>
+                </button>
+            </div>
+        </form>
+    </div>
+
+    
 </body>
 </html>
