input box data can now be captured was done in app.py

--- a/templates/index.html
+++ b/templates/index.html
@@ -44,7 +44,7 @@
             <div class="log-in_gaps bg-dark"></div>
 
             <div class="center_div d-flex justify-content-center">
-                <button class="btn btn-light">
+                <button class="btn btn-light" type="submit">
                     <label class="text text-dark fs-4">Submit</label>
                 </button>
             </div>
