working login form completed login form logic

--- a/templates/index.html
+++ b/templates/index.html
@@ -57,6 +57,7 @@
         <div class="form_to_error_message_gap bg-dark"></div>
         <div class="d-flex justify-content-center">
             <label class="text-light fs-4">{{invalid_username_message}}</label>
+            <label class="text-light fs-4">{{invalid_password_message}}</label>            
         </div>
     </div>
 
