--- a/templates/index.html
+++ b/templates/index.html
@@ -7,7 +7,7 @@
     <title>woniw credit login page</title>
 
 </head>
-<body>  
+<body class="bg-dark">  
     <style>
         .login_text{
             font-size: 50px;
@@ -35,12 +35,12 @@
 
     <div class="darker_background">
         <div class="center_div d-flex justify-content-center">
-            <h1 class="login_text">Login</1h>
+            <h1 class="login_text text-light">Login</1h>
         </div>
         <div class="header_to_login_gap"></div>
         <form method="POST">
             <div class="center_div d-flex justify-content-center fs-4">
-                <input type="text" name="username" placeholder="username"><br>  
+                <input type="text" name="username" placeholder="username" ><br>  
             </div>
             <div class="log-in_gaps bg-dark"></div>
             <div class="center_div d-flex justify-content-center fs-4">
