--- a/templates/information_page.html
+++ b/templates/information_page.html
@@ -5,8 +5,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" />
     <title>Account</title>
+
+    <div class="center_label d-flex justify-content-center">
+        <label class="fs-1 text-light">Welcome Back {{username}}!</label>
+    </div>
 </head>
 <body>
-    
+    <style>
+
+    </style>
+
+    <div class="darker_background d-flex justify-content-center">
+
+    </div>
 </body>
 </html>
