completed checking page

--- a/templates/information_page.html
+++ b/templates/information_page.html
@@ -61,7 +61,21 @@
                     <div class="info_div">
                         <label class="fs-5 text-light ps-3">Balance: ${{checking}}</label>
                         <label class="fs-5 text-light ps-3 pt-0">Monthly Fees: ${{monthly_fees}}</label>
+                        <label class="fs-5 text-light ps-3 pt-o">Overdraft Fees: ${{overdraft}}</label>
                     </div>     
+
+                    <div class="view_transactions_div">
+                        <div class="view_transactions_label">
+                            <label class="text text-light fs-5 ps-3 pt-4"><strong>View transactions:</strong></label>
+                        </div>
+
+                        <div class="transactions_link_div">
+                            <a href="">
+                                <label class="text-primary fs-5 ps-3 pt-1 ">transactions</label>
+                            </a>
+                        </div>
+
+                    </div>
                 </div>
                 
                 <div class="checking_to_savings_gap"></div>
@@ -72,7 +86,7 @@
                     </div>
                     
                     <div class="info_div">
-                        <label class="fs-5 text-light p-3">Balance: {{checking}}</label>
+                        <label class="fs-5 text-light p-3">Balance: ${{checking}}</label>
                     </div>     
                 </div>
             </div>
